--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_about">AboutActivity</string>
+    <string name="title_activity_projects">ProjectsActivity</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
