--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_activity_about">AboutActivity</string>
     <string name="title_activity_projects">ProjectsActivity</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_display">DisplayActivity</string>
 
 </resources>
