--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_projects">ProjectsActivity</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_display">DisplayActivity</string>
+    <string name="title_activity_detail">DetailActivity</string>
 
 </resources>
